<resources>
    <string name="app_name">Event Pay</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="list">Listar</string>
    <string name="exit">Sair</string>
    <string name="profile">Perfil</string>
    <string name="event">Eventos</string>
    <string name="save">Cadastrar</string>
    <string name="account">Extrato</string>
    <string name="share">Transferir</string>
    <string name="credit">Crédito</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation">Tem certeza que deseja sair?</string>
    <string name="positive">Sim</string>
    <string name="negative">Não</string>
    <string name="currency">R$</string>
    <string name="sport">Futebol</string>
    <string name="moneyValue">200</string>
    <string name="newEvent">Novo Evento</string>
    <string name="saldo">saldo</string>
    <string name="extract">Extrato</string>
    <string name="invalidUser">Usuário Inválido</string>
    <string name="invalidDay">Este não é um dia válido!</string>
    <string name="err">Erro</string>
    <string name="events">Eventos</string>
    <string name="wait">Aguarde</string>
    <string name="loadingData">Carregando dados.</string>
</resources>
