<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_account_balance_wallet_black_24dp"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_credit_card_black_24dp"
            android:title="@string/credit" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_event_black_24dp"
            android:title="@string/event" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_backup_black_24dp"
                android:title="@string/save" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_view_list_black_24dp"
                android:title="@string/list" />
        </menu>
    </item>

    <item
        android:title="@string/exit"
        android:id="@+id/bexitMenuExit"
        android:icon="@mipmap/ic_exit_to_app_black_24dp">
    </item>

</menu>
